changed photos with overlay and fixed some spacing in index.html

--- a/src/style.css
+++ b/src/style.css
@@ -74,7 +74,7 @@ p {
 }
 
 .project-description {
-  padding: 0 60px 120px;
+  padding: 0 60px 60px;
 }
 
 .btn-branding-outline {
